// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`resolvePending should handle mixed pending and applied migrations 1`] = `
[
  {
    "id": "aaa-111",
    "status": "applied",
  },
  {
    "id": "bbb-222",
    "status": "pending",
  },
  {
    "id": "ccc-333",
    "status": "pending",
  },
]
`;

exports[`resolvePending should mark all migrations as pending when none are applied 1`] = `
[
  {
    "appliedChecksum": null,
    "migration": {
      "down": [MockFunction],
      "id": "aaa-111",
      "ts": "2026-02-20T09:00:00.000Z",
      "up": [MockFunction],
    },
    "name": "20260220090000-init",
    "status": "pending",
  },
  {
    "appliedChecksum": null,
    "migration": {
      "down": [MockFunction],
      "id": "bbb-222",
      "ts": "2026-02-20T09:00:00.000Z",
      "up": [MockFunction],
    },
    "name": "20260221090000-add-users",
    "status": "pending",
  },
]
`;

exports[`resolvePending should mark migration as applied when checksum matches 1`] = `
[
  {
    "appliedChecksum": "correct-hash",
    "migration": {
      "down": [MockFunction],
      "id": "aaa-111",
      "ts": "2026-02-20T09:00:00.000Z",
      "up": [MockFunction],
    },
    "name": "20260220090000-init",
    "status": "applied",
  },
]
`;

exports[`resolvePending should mark migration as checksum_mismatch when checksum differs 1`] = `
[
  {
    "appliedChecksum": "old-hash",
    "migration": {
      "down": [MockFunction],
      "id": "aaa-111",
      "ts": "2026-02-20T09:00:00.000Z",
      "up": [MockFunction],
    },
    "name": "20260220090000-init",
    "status": "checksum_mismatch",
  },
]
`;

exports[`resolvePending should return ghost records for applied migrations with no source file 1`] = `
{
  "appliedAt": 2026-02-15T10:00:00.000Z,
  "checksum": "ghost-hash",
  "id": "ghost-uuid",
  "name": "20260215090000-deleted-migration",
}
`;
